# conifer-percyfal-ms

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  conifer.yaml  environment.yml  pyproject.toml
config/: config.yaml  envmodules.yaml  multiqc.yaml
config/local/: config.yaml
resources/: bamfiles.txt  datasources.yaml  samples-highcov.txt  samples-north.txt  samples-rangewide.txt  samples-recombination.txt  samples-south.txt  samplesheet.tsv  vcffiles.txt
resources/test/: samples.tsv
src/conifer/: __main__.py  cli.py  options.py  presabs.py
src/conifer/commands/: datasources.py  manuscript.py  smk.py  tools.py
src/conifer/io/: bed.py  csv.py  dataset.py  files.py  vcftools.py
src/conifer/model/: region.py
src/conifer/snakemake/: config.py  inputs.py  lmod.py  params.py  samples.py
src/conifer/tools/: d4utils.py  fai_to_bed.py  fasta2axt.py  genic_proximity_windows.py  gffutils.py  manuscript_source_data.py  partition_bed.py  partition_samples.py  plot.py  plot_custom.py  presabs.py  samplesheet.py  summarize.py  summarize_diversity.py  vcfstats.py  watterson.py
src/conifer/workflow/schemas/: config.schema.yaml  samples.schema.yaml
src/conifer/workflow/snakemake/commands/: coverage.smk  datasources-run.smk  manuscript-eva-submission.smk  manuscript-qc.smk  manuscript-run.smk  smk-aggregate-coverage.smk  smk-annotation.smk  smk-diversity.smk  smk-init-samplesets.smk  smk-presabs.smk  smk-qc.smk  smk-watterson.smk
src/conifer/workflow/snakemake/envs/: bamtools.yaml  bcftools.yaml  bedtools.yaml  conifer.yaml  csvtk.yaml  d4tools.yaml  emboss.yaml  gawk.yaml  graphviz.yaml  jupyter.yaml  mosdepth.yaml  plotting.yaml  qualimap.yaml  seqkit.yaml  seqtk.yaml  storage.yaml  tabixbgzip.yaml  vcftools.yaml
src/conifer/workflow/snakemake/report/: config.rst
src/conifer/workflow/snakemake/report/aggregate_coverage/: boxplot-hist-plot.rst  coverage-contig-plot.rst  hist-plot.rst  workflow.rst
src/conifer/workflow/snakemake/report/coverage/: coverage-contig-plot.rst  coverage-plot.rst  workflow.rst
src/conifer/workflow/snakemake/rules/: config.smk  files.smk  partition_regions.smk  windowing.smk
src/conifer/workflow/snakemake/scripts/: save_config.py
src/scripts/: bedhist.py  liftover_bed.py  plot_tracks.py
